@@ -1,0 +1,27 @@
+#     Copyright (C) 2018  Roland Rosenfeld <roland@spinnaker.de>
+#
+#     This program is free software; you can redistribute it and/or modify
+#     it under the terms of the GNU General Public License as published by
+#     the Free Software Foundation; either version 2 of the License, or
+#     (at your option) any later version.
+#
+#     This program is distributed in the hope that it will be useful,
+#     but WITHOUT ANY WARRANTY; without even the implied warranty of
+#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#     GNU General Public License for more details.
+#
+#     You should have received a copy of the GNU General Public License
+#     along with this program; if not, write to the Free Software Foundation,
+#     Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301,, USA.
+
+# @configure_input@
+
+# use atlocal.in to pass variables from configure, by AC_SUBST,
+# to the testsuite.
+if test "x@abs_top_builddir@" = "x@abs_top_srcdir@"; then
+  PATH=@abs_top_builddir@/src:$PATH
+else
+  PATH=@abs_top_builddir@/src:@abs_top_srcdir@/src:$PATH
+fi
+
+PACKAGE_VERSION="@PACKAGE_VERSION@"
