@@ -1,0 +1,13 @@
+lbdbq: 12 matches
+foo1@example.com	First1 Family1	alias test1
+foo2@example.com	First2 Family2	alias test2
+foo3@example.com	First3 Family3	alias test3
+foo4@example.com	First4 Family4	alias test4
+foo5@example.com	First5 Family5	alias test5
+foo6@example.com	First6 Family6	alias test6
+foo7@example.com	First7 Family7	alias test7
+foo8@example.com	First8 Family8	alias test8
+foo9@example.com	First9 Family9	alias test9
+fooA@example.com	FirstA FamilyA	alias testA
+fooB@example.com	FirstB FamilyB	alias testB
+fooC@example.com	FirstC FamilyC	alias testC
