@@ -1,0 +1,24 @@
+dnl Copyright (c) 2018 Roland Rosenfeld <roland@spinnaker.de>
+dnl
+dnl This program is free software; you can redistribute it and/or modify
+dnl it under the terms of the GNU General Public License as published by
+dnl the Free Software Foundation; either version 2 of the License, or
+dnl (at your option) any later version.
+dnl
+dnl This program is distributed in the hope that it will be useful,
+dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
+dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+dnl GNU General Public License for more details.
+dnl
+dnl You should have received a copy of the GNU General Public License
+dnl along with this program; if not, write to the Free Software Foundation,
+dnl Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
+
+AT_BANNER([Test m_muttalias])
+
+AT_SETUP(m_muttalias)
+
+AT_CHECK([cat $srcdir/data/m_muttalias.expected > expout])
+AT_CHECK([env LBDB_OVERRIDE_METHODS=m_muttalias OVERRIDE_MUTTALIAS_FILES=$abs_srcdir/data/muttaliasfile lbdbq test], [], [expout])
+
+AT_CLEANUP
