@@ -9,9 +9,12 @@ lbdb (0.46.1) UNRELEASED; urgency=medium
     perl syntax check.
   * Replace undefined $rv by $?.
   * Make the database file for m_inmail/lbdb-fetchaddr configurable.
-  * Add LBDB_OVERRIDE_METHODS, OVERIDE_MUTTALIAS_FILES variables for testing.
+  * Add LBDB_OVERRIDE_METHODS, OVERIDE_MUTTALIAS_FILES variables for
+    testing.
+  * Add a test suite.
+    - Add a test for m_muttalias.
 
- -- Roland Rosenfeld <roland@debian.org>  Fri, 30 Mar 2018 20:25:27 +0200
+ -- Roland Rosenfeld <roland@debian.org>  Sat, 31 Mar 2018 20:41:40 +0200
 
 lbdb (0.46) unstable; urgency=medium
 
